# gruener_podcast_feed

./: .env.example  .gitignore  AGENTS.md  README.md  gruen_geschnackt_poc.ipynb  podcast_voice_generator.ipynb  pyproject.toml  requirements.txt  start.sh
docs/: operations.md  rebuild_plan.md
email-connector/: README.md  go.mod  go.sum  main.go  system_prompt.txt
src/gruener_podcast_feed/: audio.py  cli.py  config.py  event_extractor.py  ical_writer.py  imap_client.py  llm.py  maintenance.py  models.py  newsletter.py  paths.py  pipeline.py  prompts.py  publisher.py  script_generator.py  speech.py  utils.py
src/gruener_podcast_feed/feed/: rss_writer.py
